--- a/css/editormd.css
+++ b/css/editormd.css
@@ -3568,7 +3568,7 @@
 }
 
 .markdown-body table {
-  display: block;
+  /*display: block;*/
   width: 100%;
   overflow: auto;
   word-break: normal;
@@ -3590,9 +3590,9 @@
   border-top: 1px solid #ccc;
 }
 
-.markdown-body table tr:nth-child(2n) {
+/*.markdown-body table tr:nth-child(2n) {
   background-color: #f8f8f8;
-}
+}*/
 
 .markdown-body img {
   max-width: 100%;
@@ -4023,6 +4023,7 @@ pre.prettyprint {
 ol.linenums {
   margin-top: 0;
   margin-bottom: 0;
+  margin-left: 0;
 }
 
 /* IE indents via margin-left */
@@ -4038,13 +4039,13 @@ li.L8 {
 }
 
 /* Alternate shading for lines */
-li.L1,
+/*li.L1,
 li.L3,
 li.L5,
 li.L7,
 li.L9 {
   background: #eee;
-}
+}*/
 
 .editormd-preview-container pre.prettyprint, .editormd-html-preview pre.prettyprint {
   padding: 10px;
